<resources>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="tv_no_account">No account? Register</string>
    <string name="tv_have_account">Already have an account? Log In</string>
    <string name="app_name">SmartChef</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Shopping List</string>

    <string name="nav_home">Recipes</string>
    <string name="nav_add">Add</string>
    <string name="nav_shopping">Shopping</string>

    <string name="recipe_title">Title</string>
    <string name="recipe_ingredients">Ingredients (comma-separated)</string>
    <string name="recipe_instructions">Instructions</string>
    <string name="btn_save">Save</string>
    <string name="hint_title">Title</string>
    <string name="hint_ingredients">Ingredients (comma separated)</string>
    <string name="hint_instructions">Instructions</string>

    <string name="delete_item">Delete item</string>
    <string name="hint_new_item">Enter item name</string>
    <string name="hint_amount">Enter amount</string>
    <string name="add_item">Add item</string>

    <string name="logout">Logout</string>

    <string name="profile">Profile</string>
    <string name="profile_icon">Profile icon</string>

    <string name="hint_search">Search items…</string>
    <string name="hint_item">Enter amount</string>
    <string name="btn_add">Add</string>
    <string name="hint_enter_number">Enter number</string>
    <string name="convert_arrow">Convert</string>
    <string name="label_result">Result</string>
    <string name="delete">-</string>
</resources>