<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_ingredients"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_instructions"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
